--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
+    "owlcarousel": "^1.3.3",
     "vue": "^2.0.1",
+    "vue-awesome-swiper": "^2.1.0",
     "vue-dropzone": "^1.0.1",
     "vue-router": "^2.0.0"
   },
