--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "owlcarousel": "^1.3.3",
+    "pixi.js": "^4.0.3",
     "vue": "^2.0.1",
     "vue-awesome-swiper": "^2.1.0",
     "vue-dropzone": "^1.0.1",
