--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "dropzone": "^4.3.0",
     "jquery": "^3.1.1",
-    "owlcarousel": "^1.3.3",
     "pixi.js": "^4.0.3",
     "vue": "^2.0.1",
     "vue-awesome-swiper": "^2.1.0",
-    "vue-dropzone": "^1.0.1",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.0.0"
   },
   "devDependencies": {
