--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "start": "node build/dev-server.js",
+    "deploy": "gcloud app deploy app.yaml"
   },
   "dependencies": {
     "dropzone": "^4.3.0",
+    "gcloud": "^0.37.0",
     "jquery": "^3.1.1",
     "pixi.js": "^4.0.3",
     "vue": "^2.0.1",
