--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1"
+  },
+  "engines": {
+    "node": ">=0.12.7"
   }
 }
