--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.0.1",
     "vue-awesome-swiper": "^2.1.0",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.0"
+    "vue-router": "^2.0.0",
+    "express": "4.13.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -31,7 +32,6 @@
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "function-bind": "^1.0.2",
@@ -52,6 +52,6 @@
     "webpack-merge": "^0.14.1"
   },
   "engines": {
-    "node": ">=0.12.7"
+    "node": ">=6.3.1"
   }
 }
