--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vue-awesome-swiper": "^2.1.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.0",
-    "express": "4.13.3"
+    "express": "4.13.3",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
