--- a/package.json
+++ b/package.json
@@ -11,15 +11,6 @@
     "deploy": "gcloud app deploy app.yaml"
   },
   "dependencies": {
-    "dropzone": "^4.3.0",
-    "gcloud": "^0.37.0",
-    "jquery": "^3.1.1",
-    "pixi.js": "^4.0.3",
-    "vue": "^2.0.1",
-    "vue-awesome-swiper": "^2.1.0",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.0",
-    "express": "4.13.3",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -29,20 +20,30 @@
     "babel-register": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
+    "dropzone": "^4.3.0",
     "eventsource-polyfill": "^0.9.6",
+    "express": "4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
     "function-bind": "^1.0.2",
+    "gcloud": "^0.37.0",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.1",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "pixi.js": "^4.0.3",
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
+    "vue": "^2.0.1",
+    "vue-awesome-swiper": "^2.1.0",
     "vue-loader": "^9.4.0",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
