--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-proxy-middleware": "^0.17.2",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
+    "nconf": "^0.8.4",
     "node-sass": "^3.10.1",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
