--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "http-proxy-middleware": "^0.17.2",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
+    "kerberos": "^0.0.21",
+    "multer": "^1.2.0",
     "nconf": "^0.8.4",
     "node-sass": "^3.10.1",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "pixi.js": "^4.0.3",
+    "prompt": "^1.0.0",
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
