--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
+    "flickity": "^2.0.5",
     "function-bind": "^1.0.2",
     "gcloud": "^0.37.0",
     "html-webpack-plugin": "^2.8.1",
