--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "kerberos": "^0.0.21",
+    "modernizr": "^3.3.1",
+    "modernizr-webpack-plugin": "^1.0.5",
     "multer": "^1.2.0",
     "nconf": "^0.8.4",
     "node-sass": "^3.10.1",
