--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "json-loader": "^0.5.4",
     "kerberos": "^0.0.21",
     "modernizr": "^3.3.1",
+    "modernizr-loader": "0.0.5",
     "modernizr-webpack-plugin": "^1.0.5",
     "multer": "^1.2.0",
     "nconf": "^0.8.4",
