--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prompt": "^1.0.0",
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
+    "twit": "^2.2.5",
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
     "vue-awesome-swiper": "^2.1.0",
