--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "prod": "node build/server.js",
+   // "prod": "node build/server.js",
     "build": "node build/build.js",
     "start": "node build/dev-server.js",
     "deploy": "gcloud app deploy app.yaml"
