--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
+    "file-saver": "git+https://github.com/eligrey/FileSaver.js.git",
+    "filesaver": "0.0.13",
     "flickity": "^2.0.5",
     "function-bind": "^1.0.2",
     "gcloud": "^0.37.0",
