--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
     "twit": "^2.2.5",
+    "ua-parser-js": "^0.7.10",
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
     "vue-awesome-swiper": "^2.1.0",
