--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "owl.carousel": "^2.2.0",
+    "pixi-simple-gesture": "^0.2.2",
     "pixi.js": "^4.0.3",
     "prompt": "^1.0.0",
     "sass-loader": "^4.0.2",
