--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "prod": "node build/server.js",
     "start": "node build/dev-server.js",
     "deploy": "gcloud app deploy app.yaml"
   },
