--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "prod": "node build/server.js",
-    "start": "node build/dev-server.js",
+    "start": "node build/server.js",
     "deploy": "gcloud app deploy app.yaml"
   },
   "dependencies": {
