--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gsap": "^1.19.0",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "https": "^1.0.0",
     "jquery": "^3.1.1",
     "jquery.pointer-events-polyfill": "^0.2.4",
     "json-loader": "^0.5.4",
