--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
     "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-history-api-fallback": "^1.1.0",
+    "cookie-parser": "^1.3.5",
     "css-loader": "^0.25.0",
     "dropzone": "^4.3.0",
+    "ejs": "^2.3.3",
     "eventsource-polyfill": "^0.9.6",
     "express": "4.13.3",
+    "express-session": "^1.14.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
     "file-loader": "^0.9.0",
@@ -36,19 +40,21 @@
     "gsap": "^1.19.0",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
-    "https": "^1.0.0",
     "jquery": "^3.1.1",
     "jquery.pointer-events-polyfill": "^0.2.4",
     "json-loader": "^0.5.4",
     "modernizr": "^3.3.1",
     "modernizr-loader": "0.0.5",
     "modernizr-webpack-plugin": "^1.0.5",
+    "morgan": "^1.6.1",
     "multer": "^1.2.0",
     "nconf": "^0.8.4",
     "node-sass": "^3.10.1",
+    "oauthio": "^0.3.4",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
-    "owl.carousel": "^2.2.0",
+    "passport": "^0.2.2",
+    "passport-twitter": "^1.0.3",
     "pixi-simple-gesture": "^0.2.2",
     "pixi.js": "^4.0.3",
     "prompt": "^1.0.0",
