--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "vue-loader": "^9.4.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.0",
-    "vue-style-loader": "^1.0.0",
+    "vue-style-loader": "^1.0.0"
+    
+  },
+  "dev_dependencies":{
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
