redirect and android

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "gsap": "^1.19.0",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "inbound": "0.0.6",
     "jquery": "^3.1.1",
     "jquery.pointer-events-polyfill": "^0.2.4",
+    "json-comments": "^0.2.1",
     "json-loader": "^0.5.4",
     "modernizr": "^3.3.1",
     "modernizr-loader": "0.0.5",
@@ -54,6 +56,7 @@
     "ora": "^0.3.0",
     "pixi.js": "^4.0.3",
     "prompt": "^1.0.0",
+    "referrer": "^1.0.2",
     "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
     "twit": "^2.2.5",
