--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.25.0",
     "dropzone": "^4.3.0",
     "eventsource-polyfill": "^0.9.6",
+    "expose-loader": "^0.7.1",
     "express": "4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
