--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "prod": "node build/server.js",
+    "prod": "NODE_ENV=production node build/server.js",
     "start": "node build/server.js",
     "deploy": "gcloud app deploy app.yaml"
   },
@@ -23,6 +23,7 @@
     "connect-ensure-login": "^0.1.1",
     "connect-history-api-fallback": "^1.1.0",
     "cookie-parser": "^1.3.5",
+    "cookie-session": "^2.0.0-alpha.1",
     "css-loader": "^0.25.0",
     "dropzone": "^4.3.0",
     "eventsource-polyfill": "^0.9.6",
