--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "nconf": "^0.8.4",
     "node-sass": "^3.10.1",
     "node-twitter-api": "^1.8.0",
+    "oauth": "^0.9.14",
     "oauthio": "^0.3.4",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "pixi.js": "^4.0.3",
     "prompt": "^1.0.0",
     "sass-loader": "^4.0.2",
-    "twit": "^2.2.5",
     "ua-parser-js": "^0.7.10",
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
