--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sass-loader": "^4.0.2",
     "ua-parser-js": "^0.7.10",
     "url-loader": "^0.5.7",
+    "util-inspect": "^0.1.8",
     "vue": "^2.0.1",
     "vue-awesome-swiper": "^2.1.0",
     "vue-loader": "^9.4.0",
