--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.25.0",
     "dropzone": "^4.3.0",
     "eventsource-polyfill": "^0.9.6",
+    "exif-js": "^2.1.1",
     "expose-loader": "^0.7.1",
     "express": "4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
